# ArianeDestroyer5000

./: ArianeDestroyer5000.cabal
app/: Bot.hs  Chess.hs  Cli.hs  Main.hs  Player.hs
app/Bot/: Bot.hs  MinMax.hs  Random.hs
app/Chess/: Board.hs  Colors.hs  Coord.hs  GameAnalysis.hs  GameState.hs  Moves.hs  Pieces.hs  Record.hs  Rules.hs
app/IO/: Board.hs  GameState.hs  Modes.hs  MoveExpression.hs
app/IO/Standard/: Command.hs  Loop.hs  ProgramState.hs
app/IO/UCI/: Command.hs  Loop.hs  State.hs
tests/bishop/: bad.txt  good.txt
tests/castle/: bad.txt  good1.txt  good2.txt
tests/pawn/en-passant/: bad.txt  good.txt
tests/queen/: bad.txt
