cabal-version:      3.0
name:               ArianeDestroyer5000
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Raphaël Colin
maintainer:         raphael.colin68@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ArianeDestroyer5000
    import:           warnings
    main-is:          Main.hs
    other-modules:    Chess.Colors
                      Chess.Pieces
                      Chess.Coord
                      Chess.Board
                      Chess.Moves
                      Chess.GameAnalysis
                      Chess.GameState
                      Chess.Rules
                      Chess.Record
                      IO.Board
                      IO.GameState
                      IO.MoveExpression
                      IO.Modes
                      IO.Standard.Command
                      IO.Standard.Loop
                      Cli
                      Player
                      Bot.Bot
                      Bot.Random
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0,
                      array,
                      ansi-terminal,
                      split,
                      optparse-applicative,
                      random
    hs-source-dirs:   app
    default-language: Haskell2010
